--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- BANNER -->
-    <header role="banner">
+    <header>
         <a href="index.html" title="HomePage"><img
                 src="https://res.cloudinary.com/dlpyn3wxf/image/upload/v1614078430/logo_mig5no.png"
                 alt="FishEye Home Page"></a>
